--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,8 +49,8 @@ body, html {
 }
 
 header {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 820px;
     background-image: url('https://images.unsplash.com/photo-1589939705384-5185137a7f0f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29uc3RydWN0aW9uJTIwd29ya2Vyc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80');
     background-position: bottom;
     background-size: cover;
@@ -66,7 +66,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 820px;
 }
 
 .header-content {
@@ -239,7 +239,7 @@ p {
     }
 
      .ctn {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
     section p {
         font-size: 1.1rem;
