--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ body, html {
 
 header {
     width: 100%;
-    height: 820px;
+    height: 818px;
     background-image: url('https://images.unsplash.com/photo-1589939705384-5185137a7f0f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29uc3RydWN0aW9uJTIwd29ya2Vyc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80');
     background-position: bottom;
     background-size: cover;
@@ -66,7 +66,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: 820px;
+    height: 818px;
 }
 
 .header-content {
@@ -159,8 +159,36 @@ p {
 
 
 
+.serviceareapic {
+  width: 100%;
+  height: auto;
+}
+
+.boroughnyc {
+    position: relative;
+    text-align: center;
+    color: red;
+}
+
+.boroughnyc-title {
+    text-align: center;
+    font-size: 7vmin;
+    color: #49497e;
+}
+
+.boroughnyc-p {
+    font-size: 2.5vmin;
+    text-align: center;
+    width: 65%;
+    margin-left: 15%;
+}
+  
+
+  
+  
 
 
+  
 
 
 
@@ -193,16 +221,15 @@ p {
         width: 100%;
         height: 100vh;
         justify-content: center;
-        background: rgb(74, 86, 101);
+        background: rgb(56, 64, 75);
         margin-top: -900px;
         transition: all 1s ease;
         z-index: 3;
-        font-size: 1.4rem;
+        font-size: 1.3rem;
         
     }
     .mobile-menu {
         margin-top: 0px;
-        border-bottom-right-radius: 30%;
 
     }
     .nav-links li{
@@ -224,7 +251,8 @@ p {
         margin: 20px auto;
     }
     .col img {
-        max-width: 90%;
+        max-width: 95%;
+        margin-top: 30px;
     }
     .row .col img{
         height: 320px;
@@ -251,6 +279,12 @@ p {
         text-align: center;
         z-index: 1;
     }
+    .boroughnyc-p {
+        font-size: 4vmin;
+        text-align: center;
+        width: 95%;
+        margin-left: 2%;
+    }
     
   
 }
@@ -260,9 +294,15 @@ p {
     .row .col {
         margin: 20px auto;
     }
+    section h4{
+        font-size: 7vmin;
+    }
+    section h1 {
+        font-size: 11vmin;
+    }
     
     .row .col img{
-        height: 220px;
+        height: 230px;
         width: 400px;
     }
     .header-content h2{
@@ -271,4 +311,16 @@ p {
     .header-content h1{
         font-size: 6vmin;
     }
+    .boroughnyc-title {
+        text-align: center;
+        font-size: 11vmin;
+        color: #49497e;
+    }
+    .boroughnyc-p {
+        font-size: 5vmin;
+        text-align: center;
+        width: 95%;
+        margin-left: 2%;
+    }
+   
 }
