page load transition

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,7 +257,7 @@ p {
 }
 
 .loaded .page-main {
-  animation: fadeIn 1s ease-in 0.7s forwards;
+  animation: fadeIn .4s ease-in .4s forwards;
 }
 
 .loaded .page-header nav > *,
