--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,7 @@ header {
     font-size: 7vmin;
     margin-top: 50px;
     margin-bottom: 30px;
+    color: rgb(255, 255, 255);
 }
 
 .ctn {
@@ -105,8 +106,8 @@ header {
 .menu-btn {
     position: absolute;
     top: 30px;
-    right: 30px;
-    width: 40px;
+    right: 40px;
+    width: 22px;
     cursor: pointer;
     display: none;
 }
@@ -142,6 +143,9 @@ section {
 .ourwork-preview .row {
     margin-top: 50px;
 }
+.ourwork-preview2 .row {
+    margin-top: 30px;
+}
 
 h4 {
     font-size: 5vmin;
@@ -154,6 +158,9 @@ p {
 }
 
 .ourwork-preview .ctn {
+    margin-top: 30px;
+}
+.ourwork-preview2 .ctn {
     margin-top: 30px;
 }
 
@@ -201,104 +208,6 @@ p {
 
 
 
-
-/* ANIMATIONS
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.page-header nav > *,
-.page-main,
-.page-footer > * {
-  opacity: 0;
-}
-
-.page-header,
-.page-footer,
-.page-main .text-wrapper {
-  overflow: hidden;
-}
-
-.page-header nav > * {
-  transform: translateY(-30px);
-}
-
-.page-footer > * {
-  transform: translateY(30px);
-}
-
-.page-header {
-  position: relative;
-}
-
-.page-header::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: var(--main-purple-color);
-  z-index: 99999;
-  transform: scaleX(0);
-}
-
-.page-main .text-wrapper + .text-wrapper {
-  margin-top: 10px;
-}
-
-.page-main .text-wrapper * {
-  transform: translateY(120%);
-}
-
-.page-main .p-wrapper * {
-  transform: translateY(-120%);
-}
-
-.loaded .page-header::after {
-  animation: scaleIn 1.3s ease-in 0.2s forwards;
-}
-
-.loaded .page-main {
-  animation: fadeIn .4s ease-in .4s forwards;
-}
-
-.loaded .page-header nav > *,
-.loaded .page-footer > * {
-  animation: fadeIn 1s ease-in 0.7s forwards, slideIn 0.8s ease-in 0.9s forwards;
-}
-
-.loaded .page-main .text-wrapper * {
-  animation: slideIn 0.6s cubic-bezier(0.54, 0.46, 0.54, 0.94) 2s forwards;
-}
-
-@keyframes fadeIn {
-  60% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes scaleIn {
-  100% {
-    transform: scaleX(1);
-  }
-}
-
-@keyframes slideIn {
-  100% {
-    transform: translateY(0);
-  }
-}
-
-
-  
-
-
-  
-
-
-
 /* Mobile Device*/
 @media only screen and (max-width:1000px){
     .menu-btn {
@@ -309,8 +218,12 @@ p {
     .header-content {
         z-index: 1;
         
-        
     }
+
+    .ourwork-preview2 .row {
+    margin-top: -80px;
+    }
+
     .navbar {
         padding: 0;
         
@@ -412,11 +325,19 @@ p {
         height: 230px;
         width: 400px;
     }
+    .header-content {
+        margin-bottom: 215px;
+        color: rgb(254, 254, 254);
+        text-align: center;
+        z-index: 1;
+    }
     .header-content h2{
-        font-size: 7vmin;
+        font-size: 8vmin;
     }
     .header-content h1{
-        font-size: 6vmin;
+        font-size: 10vmin;
+        margin-bottom: 50px;
+        
     }
     .boroughnyc-title {
         text-align: center;
