--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ body, html {
 header {
     width: 100%;
     height: 818px;
-    background-image: url('https://images.unsplash.com/photo-1589939705384-5185137a7f0f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Y29uc3RydWN0aW9uJTIwd29ya2Vyc3xlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80');
+    background-image: url('https://images.unsplash.com/photo-1482731215275-a1f151646268?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1400&q=80');
     background-position: bottom;
     background-size: cover;
     display: flex;
